@startuml moz_database
skinparam {
    Nodesep 200
    Ranksep 200
    Linetype ortho
}

skinparam entity {
    BackgroundColor LightBlue
    FontSize 14
    ArrowThickness 1
}

enum user_roles {
    ADMIN
    CLIENT
}

enum apk_status{
    ACTIVE
    REVOKED
    EXPIRED
}


entity year {
    + Id: serial [pk]
    --
    + year: integer
    + president: text
    + data_state: text
}

entity country_data {
    + Id: serial [pk]
    --
    + total_area_in_sqkm: integer
    + capital_city: text
    + official_language: text
    + independence_date: date
}

entity provinces {
   + id: serial [pk]
   --
   + province_name: text
   + area_in_sqkm: integer
   + population_density: integer
   --
   + year_id: integer [FK] references year(id)
}

entity population_per_thousand{
    + id: serial [pk]
    --
    + per_thousand_total: numeric(7,1)
    + per_thousand_male: numeric(7,1)
    + per_thousand_female: numeric (7,1)
    --
    + province_id: integer [FK] references provinces(id)
}

entity population_percentual_structure {
    + id: serial [pk]
    + percentual_total: numeric (4, 1)
    + percentual_male numeric (4, 1)
    + percentual_female: numeric (4, 1)
    --
    + province_id: integer [FK] references provinces(id)
}


entity country_pop_indicators {
    + id: serial [pk]
    --
    + total_population: numeric(7, 1)
    + male_population: numeric(7, 1)
    + female_population: numeric(6, 1)
    + urban_percentual: numeric (3,1)
    + sex_ratio: numeric(3,1)
    + gross_mortality_rate: numeric (4, 1)
    + gross_birth_rate: numeric (3, 1)
    + growth_rate: numeric (4, 1)
    + median_age: numeric (3, 1)
    --
    + year_id: integer [FK] references year(id)
}

entity dependency_rate {
    + year_id: integer [PK] references year(id)
    --
    + total: numeric (3,1)
    + young: numeric (3,1)
}

entity life_expectancy_at_birth {
    + year_id: integer [PK] references year(id)
    --
    + average_life_expectancy: numeric (3,1)
    + male_life_expectancy: numeric (3,1)
    + female_life_expectancy: numeric (3,1)
}

entity infant_mortality {
    + year_id: integer [PK] referenceces year(id)
    --
    + average_infant_mortality: numeric (3, 1)
    + male_infant_mortality: numeric (3, 1)
    + female_infant_mortality: numeric (3, 1) 
}

entity use_user {
    + user_id: integer [PK]
    --
    + user_name: text
    + user_email: text [unique]
    + user_password_hash: text
    + user_role: user_roles
    + user_created_at: timestamp
    + user_modified_at: timestamp
    + user_created_by: text
    + user_modified_by: text
    + user_is_active: boolean    
}


entity apk_api_keys {
    + apk_id: integer [pk]
    ---
    + apk_key_hash: text
    + apk_name: text
    + apk_created_at: timestamptz
    + apk_status: apk_status
    + apk_modified_at: timestamptz
    + apk_end_date: date
    + apk_last_used: timestamptz
    --
    + user_id : int [FK] referenceces use_user(user_id)
}

entity l_logs {
    + l_id: int [PK]
    ---
    + l_created_at: timestamp
    + l_request_method : varchar(10)
    + l_url: text
    + l_endpoint: text
    + l_request_query: text
    + l_response: text
    + l_status_code: int
    --
    + l_apk_id: int [FK] referenceces apk_api_keys(apk_id)
}

entity user_reset_tokens {
    + urt_id: integer [pk]
    --
    + urt_hash: text
    + urt_created_at : timestamptz
    + urt_expires_at : timestamptz
    + urt_is_used : integer
    --
    + user_id: int [FK] references use_user(user_id) on delete cascade
}

'relashionships:
year --{ provinces
provinces --{ population_per_thousand
provinces --{ population_percentual_structure
year -- life_expectancy_at_birth
year --{ country_pop_indicators
year -- dependency_rate
year -- infant_mortality
use_user ---{ apk_api_keys
apk_api_keys ---{ l_logs
use_user ---{user_reset_tokens

@enduml
